// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when generating delete trigger should generate correct trigger 1`] = `
"-- Trigger [namespaceName].[TriggerName] --
CREATE TRIGGER [namespaceName].[TriggerName]
    ON [TableSchemaName].[TableName]
    AFTER DELETE
AS
BEGIN
SQLBody
END
GO

"
`;

exports[`when generating insert trigger should generate correct trigger 1`] = `
"-- Trigger [namespaceName].[TriggerName] --
CREATE TRIGGER [namespaceName].[TriggerName]
    ON [TableSchemaName].[TableName]
    AFTER INSERT
AS
BEGIN
SQLBody
END
GO

"
`;

exports[`when generating insert, update, delete trigger should generate correct trigger 1`] = `
"-- Trigger [namespaceName].[TriggerName] --
CREATE TRIGGER [namespaceName].[TriggerName]
    ON [TableSchemaName].[TableName]
    AFTER INSERT, UPDATE, DELETE
AS
BEGIN
SQLBody
END
GO

"
`;

exports[`when generating replacement trigger should generate correct trigger 1`] = `
"-- Trigger [namespaceName].[TriggerName] --
CREATE TRIGGER [namespaceName].[TriggerName]
    ON [TableSchemaName].[TableName]
    INSTEAD OF DELETE
AS
BEGIN
SQLBody
END
GO

"
`;

exports[`when generating triggers for namespace should generate correct trigger 1`] = `
"-- Trigger [namespaceName].[TriggerName] --
CREATE TRIGGER [namespaceName].[TriggerName]
    ON [TableSchemaName].[TableName]
    INSTEAD OF 
AS
BEGIN
SQLBody
END
GO

"
`;

exports[`when generating update trigger should generate correct trigger 1`] = `
"-- Trigger [namespaceName].[TriggerName] --
CREATE TRIGGER [namespaceName].[TriggerName]
    ON [TableSchemaName].[TableName]
    AFTER UPDATE
AS
BEGIN
SQLBody
END
GO

"
`;
